moved vendor dependencies

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Boostrap
     =================================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../vendor/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap.min.css">
 
     <!-- Author Styles
     =================================================================================================-->
@@ -157,8 +157,8 @@
     </footer>
        
 
-  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="../vendor/js/bootstrap.min.js"></script>
+  <script src="vendor/js/jquery-1.11.3.min.js"></script>
+  <script src="vendor/js/bootstrap.min.js"></script>
   <script src="js/bytedown.js" type="text/javascript" charset="utf-8"></script>
   
     </body>
